k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agromarket
  labels:
    app.kubernetes.io/name: agromarket
